--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
     <!-- Loading Screen -->
     <div id="loading-screen" class="fixed inset-0 z-[200] flex items-center justify-center bg-black dark:bg-white transition-opacity duration-500">
         <div class="loading-logo animate-pulse">
-            <img src="./images/logo_dark.png" alt="Loading" class="h-16 sm:h-20 dark:hidden" />
-            <img src="./images/logo_light.png" alt="Loading" class="h-16 sm:h-20 hidden dark:block" />
+            <img src="./images/logo_dark.png" alt="Loading" class="h-24 sm:h-32 dark:hidden" />
+            <img src="./images/logo_light.png" alt="Loading" class="h-24 sm:h-32 hidden dark:block" />
         </div>
     </div>
     
@@ -303,11 +303,11 @@
     <nav id="main-nav" class="fixed top-0 w-full z-[100] backdrop-blur-md bg-transparent transition-all duration-500">
         <div class="max-w-7xl mx-auto px-2 sm:px-4 md:px-8 h-14 sm:h-16 flex items-center justify-between">
             <div
-                class="flex items-center space-x-2 sm:space-x-4 md:space-x-12 text-[8px] sm:text-[10px] font-semibold tracking-[0.1em] sm:tracking-[0.2em] uppercase text-black dark:text-white drop-shadow-lg">
+                class="flex items-center space-x-2 sm:space-x-4 md:space-x-12 text-[10px] sm:text-xs md:text-sm font-semibold tracking-[0.1em] sm:tracking-[0.2em] uppercase text-black dark:text-white drop-shadow-lg">
                 <a href="#hero"
                     class="nav-link active hover:opacity-80 transition-colors hidden md:inline-block">
-                    <img src="./images/logo_dark.png" alt="Logo" class="h-10 dark:hidden" />
-                    <img src="./images/logo_light.png" alt="Logo" class="h-10 hidden dark:block" />
+                    <img src="./images/logo_dark.png" alt="Logo" class="h-5 dark:hidden" />
+                    <img src="./images/logo_light.png" alt="Logo" class="h-5 hidden dark:block" />
                 </a>
                 <a href="#about" class="nav-link hover:opacity-80 transition-colors" data-i18n="nav_about">About</a>
                 <a href="#experience" class="nav-link hover:opacity-80 transition-colors"
