replace image to .avif

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
     <!-- Loading Screen -->
     <div id="loading-screen" class="fixed inset-0 z-[200] flex items-center justify-center bg-white dark:bg-black transition-opacity duration-500">
         <div class="loading-logo animate-pulse">
-            <img src="./images/logo_light.png" alt="Loading" class="h-24 sm:h-32 dark:hidden" />
-            <img src="./images/logo_dark.png" alt="Loading" class="h-24 sm:h-32 hidden dark:block" />
+            <img src="./images/logo_light.avif" alt="Loading" class="h-24 sm:h-32 dark:hidden" />
+            <img src="./images/logo_dark.avif" alt="Loading" class="h-24 sm:h-32 hidden dark:block" />
         </div>
     </div>
     
@@ -121,8 +121,8 @@
         <div class="max-w-7xl mx-auto px-2 sm:px-4 md:px-8 h-14 sm:h-16 flex items-center justify-between">
             <div id="nav-items" class="flex items-center space-x-2 sm:space-x-4 md:space-x-12 text-[10px] sm:text-xs md:text-sm font-semibold tracking-[0.1em] sm:tracking-[0.2em] uppercase text-white dark:text-white drop-shadow-lg transition-colors duration-300">
                 <a href="#hero" class="nav-link active hover:opacity-80 transition-colors hidden md:inline-block">
-                    <img src="./images/logo_light.png" alt="Logo" class="h-5 logo-light hidden" />
-                    <img src="./images/logo_dark.png" alt="Logo" class="h-5 logo-dark" />
+                    <img src="./images/logo_light.avif" alt="Logo" class="h-5 logo-light hidden" />
+                    <img src="./images/logo_dark.avif" alt="Logo" class="h-5 logo-dark" />
                 </a>
                 <a href="#about" class="nav-link hover:opacity-80 transition-colors" data-i18n="nav_about">About</a>
                 <a href="#experience" class="nav-link hover:opacity-80 transition-colors" data-i18n="nav_experience">Experience</a>
@@ -165,7 +165,7 @@
             <div class="hero-parallax absolute inset-0 z-0">
                 <div class="absolute inset-0 bg-gradient-to-b from-black/60 via-black/40 to-black/70 z-10"></div>
                 <div class="absolute inset-0 bg-gradient-to-r from-black/30 via-transparent to-black/30 z-10"></div>
-                <img src="./images/hero.png" alt="Abubakar Adni Portrait" class="w-full h-full object-cover object-top opacity-60" />
+                <img src="./images/hero.avif" alt="Abubakar Adni Portrait" class="w-full h-full object-cover object-top opacity-60" />
                 <!-- Artistic Red Streak -->
                 <div class="red-streak"></div>
             </div>
